welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:30: error: ';' expected but 'return' found.
    } return T}
      ^